# wallframe_apps

./: .gitignore  README.md
manymouse/: CMakeLists.txt  manifest.xml
modulair_app_image_storm/: menu.cfg
modulair_app_image_storm/include/modulair_app_image_storm/: image_storm_app.h
modulair_app_image_storm/src/: image_storm_app.cpp
modulair_app_pic_flyer/: manifest.xml  menu.cfg
modulair_app_pic_flyer/assets/image_collections/test/: collection.xml
modulair_app_pic_flyer/include/modulair_app_pic_flyer/: PicFlyer.h
modulair_app_pic_flyer/launch/: modulair_app_pic_flyer.launch  modulair_app_pic_flyer_test.launch
modulair_app_pic_flyer/src/modulair_app_pic_flyer/: PicFlyer.cpp
modulair_app_pic_flyer/src/modulair_app_pic_flyer/Model/: CollectionStore.cpp  Manuscript.cpp
modulair_app_screen_saver/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  manifest.xml  menu.cfg  modulair_app_screen_saver.cbp
modulair_app_screen_saver/include/modulair_app_screen_saver/: MouseProvider.h  glWidget.h  screen_saver_app.h
modulair_app_screen_saver/launch/: modulair_app_screen_saver.launch
modulair_app_screen_saver/mouse/: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake
modulair_app_screen_saver/src/: MouseProvider.cpp  glWidget.cpp  screen_saver_app.cpp
modulair_app_screen_saver/src/mouse/: linux_evdev.c  macosx_hidmanager.c  macosx_hidutilities.c  manymouse.c  windows_wminput.c  x11_xinput2.c
modulair_app_tron/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml  menu.cfg
modulair_app_tron/assets/maps/: Map0.txt  Map1.txt  Map2.txt  Map3.txt
modulair_app_tron/include/modulair_app_tron/: EasyParticle.h  KBLevelEditor.h  KBSkyBox.h  KineBallRun.h  KineBallRunSandbox.h  SphereObject.h  TexturedCube.h  TexturedPlane.h  TiledPlane.h  image_storm_app.h
modulair_app_tron/launch/: modulair_app_image_storm.launch  modulair_app_tron.launch
modulair_app_tron/src/: EasyParticle.cpp  KBLevelEditor.cpp  KineBallRun.cpp  KineBallRunSandbox.cpp  SphereObject.cpp  TexturedCube.cpp  TexturedPlane.cpp  TiledPlane.cpp  image_storm_app.cpp
modulair_app_wallball/: CMakeLists.txt  README  menu.cfg
modulair_app_wallball/include/: WallBall.h  WallBallWidget.h
modulair_app_wallball/include/GameObject/: GOScore.h  GameObject.h
modulair_app_wallball/src/: WallBall.cpp  WallBallWidget.cpp
modulair_app_wallball/src/GameObject/: GOBall.cpp  GOScore.cpp  GameObject.cpp
modulair_app_wallball/src/Managers/: GraphicsManager.cpp
wallframe_app_key_control/: mainpage.dox  manifest.xml
wallframe_app_key_control/launch/: wallframe_app_key_control.launch
wallframe_app_key_control/scripts/: key_control_app.py
wallframe_app_museum/: CMakeLists.txt  manifest.xml  menu.cfg
wallframe_app_museum/include/: BaseApplication.h  CameraMan.h  MuseumApp.h  Room.h  Utils.h  WPainting.h  museum_app.h  ogrewidget.h
wallframe_app_museum/launch/: wallframe_app_museum.launch
wallframe_app_museum/src/: BaseApplication.cpp  MuseumApp.cpp  Room.cpp  Utils.cpp  WPainting.cpp  museum_app.cpp  ogrewidget.cpp
